--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             var weekdayDesc = new Array(7);
             weekdayDesc[0] = "Consider taking a Shower today.";
             weekdayDesc[1] = "Time to change your sweat pants.";
-            weekdayDesc[2] = "Go around the house and pick up the last weeks' worth of filth.";
+            weekdayDesc[2] = "Go around the house and pick up the last week's worth of filth.";
             weekdayDesc[3] = "Either wash some dishes or pick up more paper plates.";
             weekdayDesc[4] = "Smell Bedding to see if it needs changing.";
             weekdayDesc[5] = "Hey, let's pretend the old ways still matter, and congrats, you made it to the end of the week.";
